OpenScenarioLib/generated/xmlParser/XMLParser.cpp

#include "PositionIndex.h"
#include "AttributeNode.h"
using namespace RAC_XML_INDEXER;


// Generated from XMLParser.g4 by ANTLR 4.8


#include "XMLParserListener.h"
#include "XMLParserVisitor.h"

#include "XMLParser.h"


using namespace antlrcpp;
using namespace antlr4;

XMLParser::XMLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

XMLParser::~XMLParser() {
  delete _interpreter;
}

std::string XMLParser::getGrammarFileName() const {
  return "XMLParser.g4";
}

const std::vector<std::string>& XMLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& XMLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- DocumentContext ------------------------------------------------------------------

XMLParser::DocumentContext::DocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XMLParser::PrologContext* XMLParser::DocumentContext::prolog() {
  return getRuleContext<XMLParser::PrologContext>(0);
}

XMLParser::ElementContext* XMLParser::DocumentContext::element() {
  return getRuleContext<XMLParser::ElementContext>(0);
}

std::vector<XMLParser::MiscContext *> XMLParser::DocumentContext::misc() {
  return getRuleContexts<XMLParser::MiscContext>();
}

XMLParser::MiscContext* XMLParser::DocumentContext::misc(size_t i) {
  return getRuleContext<XMLParser::MiscContext>(i);
}

XMLParser::DoctypedeclContext* XMLParser::DocumentContext::doctypedecl() {
  return getRuleContext<XMLParser::DoctypedeclContext>(0);
}


size_t XMLParser::DocumentContext::getRuleIndex() const {
  return XMLParser::RuleDocument;
}

void XMLParser::DocumentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDocument(this);
}

void XMLParser::DocumentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDocument(this);
}


antlrcpp::Any XMLParser::DocumentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XMLParserVisitor*>(visitor))
    return parserVisitor->visitDocument(this);
  else
    return visitor->visitChildren(this);
}

XMLParser::DocumentContext* XMLParser::document() {
  DocumentContext *_localctx = _tracker.createInstance<DocumentContext>(_ctx, getState());
  enterRule(_localctx, 0, XMLParser::RuleDocument);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(20);
    prolog();
    setState(24);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << XMLParser::COMMENT)
      | (1ULL << XMLParser::SEA_WS)
      | (1ULL << XMLParser::PI))) != 0)) {
      setState(21);
      misc();
      setState(26);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(34);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == XMLParser::DTD_START) {
      setState(27);
      doctypedecl();
      setState(31);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << XMLParser::COMMENT)
        | (1ULL << XMLParser::SEA_WS)
        | (1ULL << XMLParser::PI))) != 0)) {
        setState(28);
        misc();
        setState(33);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(36);
    element();
    setState(40);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << XMLParser::COMMENT)
      | (1ULL << XMLParser::SEA_WS)
      | (1ULL << XMLParser::PI))) != 0)) {
      setState(37);
      misc();
      setState(42);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrologContext ------------------------------------------------------------------

XMLParser::PrologContext::PrologContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* XMLParser::PrologContext::XMLDeclOpen() {
  return getToken(XMLParser::XMLDeclOpen, 0);
}

tree::TerminalNode* XMLParser::PrologContext::SPECIAL_CLOSE() {
  return getToken(XMLParser::SPECIAL_CLOSE, 0);
}

std::vector<XMLParser::AttributeContext *> XMLParser::PrologContext::attribute() {
  return getRuleContexts<XMLParser::AttributeContext>();
}

XMLParser::AttributeContext* XMLParser::PrologContext::attribute(size_t i) {
  return getRuleContext<XMLParser::AttributeContext>(i);
}


size_t XMLParser::PrologContext::getRuleIndex() const {
  return XMLParser::RuleProlog;
}

void XMLParser::PrologContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProlog(this);
}

void XMLParser::PrologContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProlog(this);
}


antlrcpp::Any XMLParser::PrologContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XMLParserVisitor*>(visitor))
    return parserVisitor->visitProlog(this);
  else
    return visitor->visitChildren(this);
}

XMLParser::PrologContext* XMLParser::prolog() {
  PrologContext *_localctx = _tracker.createInstance<PrologContext>(_ctx, getState());
  enterRule(_localctx, 2, XMLParser::RuleProlog);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    match(XMLParser::XMLDeclOpen);
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == XMLParser::Name) {
      setState(44);
      attribute();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(50);
    match(XMLParser::SPECIAL_CLOSE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DoctypedeclContext ------------------------------------------------------------------

XMLParser::DoctypedeclContext::DoctypedeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* XMLParser::DoctypedeclContext::DTD_START() {
  return getToken(XMLParser::DTD_START, 0);
}

tree::TerminalNode* XMLParser::DoctypedeclContext::DTD_CLOSE() {
  return getToken(XMLParser::DTD_CLOSE, 0);
}

std::vector<tree::TerminalNode *> XMLParser::DoctypedeclContext::DTD_NESTED() {
  return getTokens(XMLParser::DTD_NESTED);
}

tree::TerminalNode* XMLParser::DoctypedeclContext::DTD_NESTED(size_t i) {
  return getToken(XMLParser::DTD_NESTED, i);
}


size_t XMLParser::DoctypedeclContext::getRuleIndex() const {
  return XMLParser::RuleDoctypedecl;
}

void XMLParser::DoctypedeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDoctypedecl(this);
}

void XMLParser::DoctypedeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDoctypedecl(this);
}


antlrcpp::Any XMLParser::DoctypedeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XMLParserVisitor*>(visitor))
    return parserVisitor->visitDoctypedecl(this);
  else
    return visitor->visitChildren(this);
}

XMLParser::DoctypedeclContext* XMLParser::doctypedecl() {
  DoctypedeclContext *_localctx = _tracker.createInstance<DoctypedeclContext>(_ctx, getState());
  enterRule(_localctx, 4, XMLParser::RuleDoctypedecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(XMLParser::DTD_START);
    setState(56);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == XMLParser::DTD_NESTED) {
      setState(53);
      match(XMLParser::DTD_NESTED);
      setState(58);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(59);
    match(XMLParser::DTD_CLOSE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ContentContext ------------------------------------------------------------------

XMLParser::ContentContext::ContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<XMLParser::ChardataContext *> XMLParser::ContentContext::chardata() {
  return getRuleContexts<XMLParser::ChardataContext>();
}

XMLParser::ChardataContext* XMLParser::ContentContext::chardata(size_t i) {
  return getRuleContext<XMLParser::ChardataContext>(i);
}

std::vector<tree::TerminalNode *> XMLParser::ContentContext::CDATA() {
  return getTokens(XMLParser::CDATA);
}

tree::TerminalNode* XMLParser::ContentContext::CDATA(size_t i) {
  return getToken(XMLParser::CDATA, i);
}

std::vector<XMLParser::ElementContext *> XMLParser::ContentContext::element() {
  return getRuleContexts<XMLParser::ElementContext>();
}

XMLParser::ElementContext* XMLParser::ContentContext::element(size_t i) {
  return getRuleContext<XMLParser::ElementContext>(i);
}

std::vector<XMLParser::ReferenceContext *> XMLParser::ContentContext::reference() {
  return getRuleContexts<XMLParser::ReferenceContext>();
}

XMLParser::ReferenceContext* XMLParser::ContentContext::reference(size_t i) {
  return getRuleContext<XMLParser::ReferenceContext>(i);
}

std::vector<tree::TerminalNode *> XMLParser::ContentContext::PI() {
  return getTokens(XMLParser::PI);
}

tree::TerminalNode* XMLParser::ContentContext::PI(size_t i) {
  return getToken(XMLParser::PI, i);
}

std::vector<tree::TerminalNode *> XMLParser::ContentContext::COMMENT() {
  return getTokens(XMLParser::COMMENT);
}

tree::TerminalNode* XMLParser::ContentContext::COMMENT(size_t i) {
  return getToken(XMLParser::COMMENT, i);
}


size_t XMLParser::ContentContext::getRuleIndex() const {
  return XMLParser::RuleContent;
}

void XMLParser::ContentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterContent(this);
}

void XMLParser::ContentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitContent(this);
}


antlrcpp::Any XMLParser::ContentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XMLParserVisitor*>(visitor))
    return parserVisitor->visitContent(this);
  else
    return visitor->visitChildren(this);
}

XMLParser::ContentContext* XMLParser::content() {
  ContentContext *_localctx = _tracker.createInstance<ContentContext>(_ctx, getState());
  enterRule(_localctx, 6, XMLParser::RuleContent);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(61);
      chardata();
      break;
    }

    case 2: {
      setState(62);
      match(XMLParser::CDATA);
      break;
    }

    }
    setState(78);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(70);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case XMLParser::OPEN: {
            setState(65);
            element();
            break;
          }

          case XMLParser::EntityRef:
          case XMLParser::CharRef: {
            setState(66);
            reference();
            break;
          }

          case XMLParser::CDATA: {
            setState(67);
            match(XMLParser::CDATA);
            break;
          }

          case XMLParser::PI: {
            setState(68);
            match(XMLParser::PI);
            break;
          }

          case XMLParser::COMMENT: {
            setState(69);
            match(XMLParser::COMMENT);
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(74);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
        case 1: {
          setState(72);
          chardata();
          break;
        }

        case 2: {
          setState(73);
          match(XMLParser::CDATA);
          break;
        }

        } 
      }
      setState(80);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

XMLParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XMLParser::ContentContext* XMLParser::ElementContext::content() {
  return getRuleContext<XMLParser::ContentContext>(0);
}

std::vector<tree::TerminalNode *> XMLParser::ElementContext::OPEN() {
  return getTokens(XMLParser::OPEN);
}

tree::TerminalNode* XMLParser::ElementContext::OPEN(size_t i) {
  return getToken(XMLParser::OPEN, i);
}

tree::TerminalNode* XMLParser::ElementContext::SLASH() {
  return getToken(XMLParser::SLASH, 0);
}

std::vector<tree::TerminalNode *> XMLParser::ElementContext::Name() {
  return getTokens(XMLParser::Name);
}

tree::TerminalNode* XMLParser::ElementContext::Name(size_t i) {
  return getToken(XMLParser::Name, i);
}

std::vector<tree::TerminalNode *> XMLParser::ElementContext::CLOSE() {
  return getTokens(XMLParser::CLOSE);
}

tree::TerminalNode* XMLParser::ElementContext::CLOSE(size_t i) {
  return getToken(XMLParser::CLOSE, i);
}

XMLParser::AttributeListContext* XMLParser::ElementContext::attributeList() {
  return getRuleContext<XMLParser::AttributeListContext>(0);
}

tree::TerminalNode* XMLParser::ElementContext::SLASH_CLOSE() {
  return getToken(XMLParser::SLASH_CLOSE, 0);
}


size_t XMLParser::ElementContext::getRuleIndex() const {
  return XMLParser::RuleElement;
}

void XMLParser::ElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElement(this);
}

void XMLParser::ElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElement(this);
}


antlrcpp::Any XMLParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XMLParserVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

XMLParser::ElementContext* XMLParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 8, XMLParser::RuleElement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(81);
      dynamic_cast<ElementContext *>(_localctx)->openToken = match(XMLParser::OPEN);
      setState(82);
      match(XMLParser::Name);
      setState(83);
      dynamic_cast<ElementContext *>(_localctx)->r = attributeList();
      setState(84);
      dynamic_cast<ElementContext *>(_localctx)->closeToken = match(XMLParser::CLOSE);
      _positionIndex.PushElementNode(dynamic_cast<ElementContext *>(_localctx)->openToken->getLine(), dynamic_cast<ElementContext *>(_localctx)->openToken->getCharPositionInLine(),dynamic_cast<ElementContext *>(_localctx)->r->result);
      setState(87);
      content();
      setState(88);
      dynamic_cast<ElementContext *>(_localctx)->openToken = match(XMLParser::OPEN);
      setState(89);
      match(XMLParser::SLASH);
      setState(90);
      match(XMLParser::Name);
      setState(91);
      dynamic_cast<ElementContext *>(_localctx)->closeToken = match(XMLParser::CLOSE);
      _positionIndex.SetEndPosition(dynamic_cast<ElementContext *>(_localctx)->closeToken->getLine(), dynamic_cast<ElementContext *>(_localctx)->closeToken->getCharPositionInLine()+1);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(94);
      dynamic_cast<ElementContext *>(_localctx)->openToken = match(XMLParser::OPEN);
      setState(95);
      match(XMLParser::Name);
      setState(96);
      dynamic_cast<ElementContext *>(_localctx)->r = attributeList();
      _positionIndex.PushElementNode(dynamic_cast<ElementContext *>(_localctx)->openToken->getLine(), dynamic_cast<ElementContext *>(_localctx)->openToken->getCharPositionInLine(),dynamic_cast<ElementContext *>(_localctx)->r->result);
      setState(99);
      dynamic_cast<ElementContext *>(_localctx)->slash_closeToken = match(XMLParser::SLASH_CLOSE);
      _positionIndex.SetEndPosition(dynamic_cast<ElementContext *>(_localctx)->slash_closeToken->getLine(), dynamic_cast<ElementContext *>(_localctx)->slash_closeToken->getCharPositionInLine()+2);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeListContext ------------------------------------------------------------------

XMLParser::AttributeListContext::AttributeListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<XMLParser::AttributeContext *> XMLParser::AttributeListContext::attribute() {
  return getRuleContexts<XMLParser::AttributeContext>();
}

XMLParser::AttributeContext* XMLParser::AttributeListContext::attribute(size_t i) {
  return getRuleContext<XMLParser::AttributeContext>(i);
}


size_t XMLParser::AttributeListContext::getRuleIndex() const {
  return XMLParser::RuleAttributeList;
}

void XMLParser::AttributeListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttributeList(this);
}

void XMLParser::AttributeListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttributeList(this);
}


antlrcpp::Any XMLParser::AttributeListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XMLParserVisitor*>(visitor))
    return parserVisitor->visitAttributeList(this);
  else
    return visitor->visitChildren(this);
}

XMLParser::AttributeListContext* XMLParser::attributeList() {
  AttributeListContext *_localctx = _tracker.createInstance<AttributeListContext>(_ctx, getState());
  enterRule(_localctx, 10, XMLParser::RuleAttributeList);

      dynamic_cast<AttributeListContext *>(_localctx)->result =  std::vector<AttributeNode> {};

  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == XMLParser::Name) {
      setState(104);
      dynamic_cast<AttributeListContext *>(_localctx)->attributeContext = attribute();
      _localctx->result.emplace_back(AttributeNode(dynamic_cast<AttributeListContext *>(_localctx)->attributeContext->result,(dynamic_cast<AttributeListContext *>(_localctx)->attributeContext != nullptr ? (dynamic_cast<AttributeListContext *>(_localctx)->attributeContext->start) : nullptr)->getLine(), (dynamic_cast<AttributeListContext *>(_localctx)->attributeContext != nullptr ? (dynamic_cast<AttributeListContext *>(_localctx)->attributeContext->start) : nullptr)->getCharPositionInLine(), (dynamic_cast<AttributeListContext *>(_localctx)->attributeContext != nullptr ? (dynamic_cast<AttributeListContext *>(_localctx)->attributeContext->stop) : nullptr)->getLine(), (dynamic_cast<AttributeListContext *>(_localctx)->attributeContext != nullptr ? (dynamic_cast<AttributeListContext *>(_localctx)->attributeContext->stop) : nullptr)->getCharPositionInLine()));
      setState(111);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReferenceContext ------------------------------------------------------------------

XMLParser::ReferenceContext::ReferenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* XMLParser::ReferenceContext::EntityRef() {
  return getToken(XMLParser::EntityRef, 0);
}

tree::TerminalNode* XMLParser::ReferenceContext::CharRef() {
  return getToken(XMLParser::CharRef, 0);
}


size_t XMLParser::ReferenceContext::getRuleIndex() const {
  return XMLParser::RuleReference;
}

void XMLParser::ReferenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReference(this);
}

void XMLParser::ReferenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XMLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReference(this);
}


antlrcpp::Any XMLParser::ReferenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XMLParserVisitor*>(visitor))
    return parserVisitor->visitReference(this);
  else
    return visitor->visitChildren(this);
}

XMLParser::ReferenceContext* XMLParser::reference() {
  ReferenceContext *_localctx = _tracker.createInstance<ReferenceContext>(_ctx, getState());
  enterRule(_localctx, 12, XMLParser::RuleReference);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    _la = _input->LA(1);
    if (!(_la == XMLParser::EntityRef

    || _la == XMLParser::CharRef)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

XMLParser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

